--- a/public/index.html
+++ b/public/index.html
@@ -12,25 +12,24 @@
     }
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
+      height: 100%;
       font-family: 'Archivo', sans-serif;
       background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
-      height: 100%;
       overflow: hidden;
     }
     body.dark { background: #000; }
-    .main {
-      display: flex;
-      flex-direction: column;
+
+    body {
+      display: grid;
+      grid-template-rows: var(--header-height) 1fr var(--footer-height);
       height: 100dvh;
-      overflow: hidden;
     }
+
     .header-message {
-      height: var(--header-height);
       display: flex;
       align-items: center;
       justify-content: center;
       padding: 0 2vw;
-      flex-shrink: 0;
     }
     .header-gradient {
       font-weight: 900;
@@ -42,67 +41,76 @@
       animation: pulseText 8s linear infinite;
       white-space: nowrap;
     }
+
     .grid {
-      height: calc(100dvh - var(--header-height) - var(--footer-height));
       display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, 1fr);
       gap: 1.5vw;
       padding: 2vw;
+      height: 100%;
     }
-    @media (orientation: landscape) {
+
+    @media (orientation: landscape) and (min-width: 768px) {
       .grid {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: 1fr;
       }
     }
+
     .block {
-      position: relative;
       display: flex;
-      justify-content: center;
       align-items: center;
-      text-align: center;
+      justify-content: center;
+      position: relative;
       border-radius: 18px;
       font-weight: bold;
       font-size: clamp(1rem, 1.9vw, 1.3rem);
       color: #fff;
       background-size: 200% 200%;
       background-position: center;
-      cursor: pointer;
       overflow: hidden;
+      aspect-ratio: 1 / 1;
+      cursor: pointer;
       animation: popIn 0.7s ease forwards;
     }
+
     .block-content {
       position: absolute;
       inset: 0;
       display: flex;
-      justify-content: center;
       align-items: center;
-      padding: 6px;
+      justify-content: center;
       text-align: center;
+      padding: 6px;
     }
-    .label { z-index: 1; }
+
     .accionable {
-      color: #fff;
       font-family: 'Poppins', sans-serif;
       font-size: clamp(.9rem, 1.4vw, 1.2rem);
       font-weight: 600;
       padding: 10px;
       border-radius: 14px;
-      opacity: 0;
-      animation: fadeIn 0.6s forwards;
       text-align: center;
       box-shadow: 0 6px 20px rgba(0, 0, 0, .3);
+      background: rgba(0, 0, 0, 0.4);
+      opacity: 0;
+      animation: fadeIn 0.6s forwards;
+      color: #fff;
     }
+
     .portada-wrapper {
       width: 100%;
       height: 100%;
       display: flex;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
       background: radial-gradient(circle, #ffffff10, #0000);
       animation: glow 6s ease-in-out infinite;
+      border-radius: 18px;
+      overflow: hidden;
     }
+
     .portada-wrapper img {
       width: 80%;
       max-height: 90%;
@@ -111,18 +119,36 @@
       box-shadow: 0 10px 24px rgba(0, 0, 0, .4);
       transition: transform 0.5s;
     }
+
     .portada-wrapper img:hover {
       transform: scale(1.03) rotateY(4deg) rotateX(2deg);
     }
+
     .footer {
-      height: var(--footer-height);
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
       padding: 2vh 2vw;
-      flex-shrink: 0;
+      overflow: hidden;
     }
+
+    .frase-magica,
+    .shock,
+    .counter {
+      font-family: 'Poppins', sans-serif;
+      transition: opacity 0.4s ease;
+    }
+
+    .frase-magica {
+      font-size: 1rem;
+      color: #00ffff;
+      text-align: center;
+      margin-bottom: 1vh;
+      opacity: 0;
+      height: 1.5em;
+    }
+
     .shock {
       background: linear-gradient(135deg, #ff006e, #8338ec, #3a86ff);
       color: white;
@@ -130,71 +156,58 @@
       border: none;
       border-radius: 999px;
       padding: 12px 26px;
-      margin-top: 8px;
       font-size: clamp(.9rem, 1.8vw, 1.2rem);
       cursor: pointer;
       box-shadow: 0 0 16px rgba(255, 255, 255, 0.15);
       animation: pulse 2s infinite;
       max-width: 95%;
+      opacity: 0;
+      margin-top: 6px;
     }
+
     .counter {
       font-size: clamp(.9rem, 1.2vw, 1.1rem);
       color: #fff;
       margin-top: 6px;
-      font-family: 'Poppins', sans-serif;
       text-align: center;
       white-space: nowrap;
       opacity: 0;
-      transition: opacity 0.4s ease;
     }
+
     .resaltado {
       font-size: 1.1em;
       color: #ffeb3b;
       font-weight: 700;
     }
+
     .trigguiletras {
       height: 20px;
       opacity: .9;
       margin-top: 1.5vh;
     }
-    .hidden {
-      visibility: hidden;
-      opacity: 0;
-      pointer-events: none;
-      height: 0;
-      overflow: hidden;
-      transition: opacity 0.5s ease;
-    }
-    .visible {
-      visibility: visible;
-      opacity: 1;
-      height: auto;
-      pointer-events: auto;
-    }
-    .frase-magica {
-      font-size: 1rem;
-      color: #00ffff;
-      text-align: center;
-      margin-top: 1rem;
-      font-family: 'Poppins', sans-serif;
-      transition: opacity 0.4s ease;
-    }
+
+    .hidden { display: none !important; }
+
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
+
     @keyframes popIn {
       0% { transform: scale(0.95); opacity: 0; }
       100% { transform: scale(1); opacity: 1; }
     }
+
     @keyframes pulse {
       0%, 100% { transform: scale(1); }
       50% { transform: scale(1.06); }
     }
+
     @keyframes glow {
       0%, 100% { background: radial-gradient(circle, #ffffff05, #0000); }
       50% { background: radial-gradient(circle, #ffffff20, #0000); }
     }
+
     @keyframes pulseText {
       0% { background-position: 0% 50%; }
       100% { background-position: 200% 50%; }
@@ -202,18 +215,17 @@
   </style>
 </head>
 <body>
-  <div class="main">
-    <div class="header-message">
-      <div class="header-gradient">¿Dónde está el libro? 📚</div>
-    </div>
-    <div class="grid" id="gridContainer"></div>
-    <div class="footer" id="footer">
-      <div class="frase-magica hidden" id="fraseMagica">✨ Si tienes cualquier libro físico cerca. Ábrelo.</div>
-      <button class="shock hidden" id="shockBtn">📖 ¡Chócalas si abriste un libro físico!</button>
-      <div class="counter hidden" id="contador">✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨</div>
-      <img src="/trigguiletras.png" class="trigguiletras" id="logoTriggui">
-    </div>
+  <div class="header-message">
+    <div class="header-gradient">¿Dónde está el libro? 📚</div>
   </div>
+  <div class="grid" id="gridContainer"></div>
+  <div class="footer">
+    <div class="frase-magica" id="fraseMagica">✨ Si tienes cualquier libro físico cerca. Ábrelo.</div>
+    <button class="shock" id="shockBtn">📖 ¡Chócalas si abriste un libro físico!</button>
+    <div class="counter" id="contador">✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨</div>
+    <img src="/trigguiletras.png" class="trigguiletras" id="logoTriggui">
+  </div>
+
   <script>
     const $ = id => document.getElementById(id);
     let libroActual, bloquePortada, revelado = false;
@@ -238,7 +250,6 @@
 
     function iniciarUI(libro) {
       const grid = $("gridContainer");
-      $("logoTriggui").classList.remove("hidden");
       grid.innerHTML = "";
       libro.palabras.forEach((palabra, i) => {
         const div = document.createElement("div");
@@ -259,7 +270,6 @@
       if (i === bloquePortada) revelarTodo();
       else {
         $(`bloque${i}Text`).classList.remove("hidden");
-        $(`bloque${i}Text`).classList.add("visible");
         $(`bloque${i}`).querySelector(".label").classList.add("hidden");
       }
     }
@@ -279,35 +289,23 @@
           block.style.background = "none";
         } else {
           $(`bloque${i}Text`).classList.remove("hidden");
-          $(`bloque${i}Text`).classList.add("visible");
           block.querySelector(".label").classList.add("hidden");
         }
       });
       document.body.classList.add("dark");
       document.body.style.background = libroActual.fondo;
-      $("logoTriggui").classList.add("hidden");
-
-      $("fraseMagica").classList.remove("hidden");
-      $("fraseMagica").classList.add("visible");
-
+      $("logoTriggui").style.display = "none";
+      $("fraseMagica").style.opacity = 1;
       setTimeout(() => {
-        $("fraseMagica").classList.remove("visible");
-        $("fraseMagica").classList.add("hidden");
-
-        $("shockBtn").classList.remove("hidden");
-        $("shockBtn").classList.add("visible");
+        $("fraseMagica").style.opacity = 0;
+        $("shockBtn").style.opacity = 1;
       }, 2500);
-
       revelado = true;
     }
 
     $("shockBtn").onclick = async () => {
-      $("shockBtn").classList.remove("visible");
-      $("shockBtn").classList.add("hidden");
-
-      $("contador").classList.remove("hidden");
-      $("contador").classList.add("visible");
-
+      $("shockBtn").style.opacity = 0;
+      $("contador").style.opacity = 1;
       try {
         const res = await fetch("https://triggui-api.vercel.app/api/increment");
         const data = await res.json();
