--- a/public/index.html
+++ b/public/index.html
@@ -3,321 +3,95 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>TrigguiApp – Un instante, un universo</title>
-  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet" />
+  <title>TrigguiApp Layout Test</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
       height: 100%;
-      font-family: 'Archivo', sans-serif;
       background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
+      font-family: sans-serif;
       overflow: hidden;
     }
-    body.dark { background: #000; }
-
-    .main {
+    body {
       display: flex;
       flex-direction: column;
-      height: 100%;
     }
-
-    .header-message {
+    .header {
       height: 60px;
       flex-shrink: 0;
       display: flex;
-      align-items: center;
       justify-content: center;
-      padding: 0 2vw;
+      align-items: center;
+      color: #fff;
+      font-weight: bold;
+      background: transparent;
     }
-    .header-gradient {
-      font-weight: 900;
-      font-size: clamp(1.4rem, 2.6vw, 2.2rem);
-      background: linear-gradient(to right, #f72585, #7209b7, #3a0ca3, #4361ee, #4cc9f0);
-      background-size: 400% auto;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: pulseText 8s linear infinite;
-      white-space: nowrap;
-    }
-
     .grid {
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(2, 1fr);
       gap: 1.5vw;
       padding: 2vw;
       flex-grow: 1;
     }
-
-    @media (orientation: landscape) and (min-width: 768px) {
-      .grid {
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: 1fr;
-      }
-    }
-
     .block {
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
+      background: #333;
       border-radius: 18px;
-      font-weight: bold;
-      font-size: clamp(1rem, 1.9vw, 1.3rem);
-      color: #fff;
-      background-size: 200% 200%;
-      background-position: center;
-      cursor: pointer;
-      overflow: hidden;
-    }
-
-    .block-content {
-      position: absolute;
-      inset: 0;
       display: flex;
-      justify-content: center;
       align-items: center;
-      padding: 6px;
+      justify-content: center;
+      color: white;
+      font-size: 1.2rem;
       text-align: center;
     }
-
-    .accionable {
-      color: #fff;
-      font-family: 'Poppins', sans-serif;
-      font-size: clamp(.9rem, 1.4vw, 1.2rem);
-      font-weight: 600;
-      padding: 10px;
-      border-radius: 14px;
-      text-align: center;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, .3);
-      background: rgba(0, 0, 0, 0.4);
-      opacity: 0;
-      animation: fadeIn 0.6s forwards;
-    }
-
-    .portada-wrapper {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: radial-gradient(circle, #ffffff10, #0000);
-      animation: glow 6s ease-in-out infinite;
-      border-radius: 18px;
-      overflow: hidden;
-    }
-
-    .portada-wrapper img {
-      width: 80%;
-      max-height: 90%;
-      object-fit: contain;
-      border-radius: 20px;
-      box-shadow: 0 10px 24px rgba(0, 0, 0, .4);
-      transition: transform 0.5s;
-    }
-
-    .portada-wrapper img:hover {
-      transform: scale(1.03) rotateY(4deg) rotateX(2deg);
-    }
-
     .footer {
       height: 160px;
       flex-shrink: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      padding: 2vh 2vw;
-    }
-
-    .shock {
-      background: linear-gradient(135deg, #ff006e, #8338ec, #3a86ff);
-      color: white;
-      font-weight: bold;
-      border: none;
-      border-radius: 999px;
-      padding: 12px 26px;
-      margin-top: 8px;
-      font-size: clamp(.9rem, 1.8vw, 1.2rem);
-      cursor: pointer;
-      box-shadow: 0 0 16px rgba(255, 255, 255, 0.15);
-      animation: pulse 2s infinite;
-      max-width: 95%;
-      opacity: 0;
-      transition: opacity 0.4s ease;
-    }
-
-    .counter {
-      font-size: clamp(.9rem, 1.2vw, 1.1rem);
-      color: #fff;
-      margin-top: 6px;
-      font-family: 'Poppins', sans-serif;
+      padding: 1rem;
+      color: #aaa;
       text-align: center;
-      white-space: nowrap;
-      opacity: 0;
-      transition: opacity 0.4s ease;
-    }
-
-    .resaltado {
-      font-size: 1.1em;
-      color: #ffeb3b;
-      font-weight: 700;
-    }
-
-    .trigguiletras {
-      height: 20px;
-      opacity: .9;
-      margin-top: 1.5vh;
-    }
-
-    .frase-magica {
-      font-size: 1rem;
-      color: #00ffff;
-      text-align: center;
-      margin-top: 1rem;
-      font-family: 'Poppins', sans-serif;
-      opacity: 0;
-      transition: opacity 0.4s ease;
-    }
-
-    .hidden { display: none !important; }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-    @keyframes pulse {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.06); }
-    }
-    @keyframes glow {
-      0%, 100% { background: radial-gradient(circle, #ffffff05, #0000); }
-      50% { background: radial-gradient(circle, #ffffff20, #0000); }
-    }
-    @keyframes pulseText {
-      0% { background-position: 0% 50%; }
-      100% { background-position: 200% 50%; }
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
-  <div class="main">
-    <div class="header-message">
-      <div class="header-gradient">¿Dónde está el libro? 📚</div>
-    </div>
-    <div class="grid" id="gridContainer"></div>
-    <div class="footer">
-      <div class="frase-magica" id="fraseMagica">✨ Si tienes cualquier libro físico cerca. Ábrelo.</div>
-      <button class="shock" id="shockBtn">📖 ¡Chócalas si abriste un libro físico!</button>
-      <div class="counter" id="contador">✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨</div>
-      <img src="/trigguiletras.png" class="trigguiletras" id="logoTriggui">
-    </div>
-  </div>
+  <div class="header">Header fijo</div>
+  <div class="grid" id="gridContainer"></div>
+  <div class="footer">Footer fijo con espacio para botones y frase</div>
 
   <script>
-    const $ = id => document.getElementById(id);
-    let libroActual, bloquePortada, revelado = false;
-    const emojis = ["🌊","🛡️","🧠","📘","🔮","❤️","✨","🪞"];
+    const grid = document.getElementById("gridContainer");
 
-    function ajustarAlturaBloques() {
-      const grid = $("gridContainer");
-      const alto = window.innerHeight;
-      const header = document.querySelector(".header-message").offsetHeight;
-      const footer = document.querySelector(".footer").offsetHeight;
-      const disponible = alto - header - footer;
-      const columnas = window.matchMedia("(orientation: landscape)").matches && window.innerWidth > 768 ? 4 : 2;
-      const filas = 4 / columnas;
-      const alturaBloque = (disponible - 16) / filas;
-      [...grid.children].forEach(b => b.style.height = `${alturaBloque}px`);
-    }
-
-    window.addEventListener("resize", ajustarAlturaBloques);
-
-    fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json")
-      .then(res => res.json())
-      .then(data => {
-        const libro = data.libros[Math.floor(Math.random()*data.libros.length)];
-        libroActual = libro;
-        bloquePortada = Math.floor(Math.random()*4);
-        iniciarUI(libro);
-      });
-
-    function generarGradiente(color) {
-      const h = parseInt(color.slice(1,3),16),
-            l = parseInt(color.slice(3,5),16),
-            s = parseInt(color.slice(5,7),16);
-      const light = `rgba(${Math.min(h+30,255)},${Math.min(l+30,255)},${Math.min(s+30,255)},0.85)`;
-      return `linear-gradient(135deg, ${color}, ${light})`;
-    }
-
-    function iniciarUI(libro) {
-      const grid = $("gridContainer");
+    function redibujarBloques() {
       grid.innerHTML = "";
-      libro.palabras.forEach((palabra, i) => {
-        const div = document.createElement("div");
-        div.className = "block";
-        div.id = `bloque${i}`;
-        div.style.background = generarGradiente(libro.colores[i] || "#555");
-        const emoji = emojis[i % emojis.length];
-        div.innerHTML = `
-          <div class="block-content label">${emoji} ${palabra}</div>
-          <div class="block-content accionable hidden" id="bloque${i}Text">${libro.frases[i]}</div>`;
-        div.onclick = () => manejarClick(i);
-        grid.appendChild(div);
-      });
-      ajustarAlturaBloques();
-    }
 
-    function manejarClick(i) {
-      if (revelado) return location.reload();
-      if (i === bloquePortada) revelarTodo();
-      else {
-        $(`bloque${i}Text`).classList.remove("hidden");
-        $(`bloque${i}`).querySelector(".label").classList.add("hidden");
+      const width = window.innerWidth;
+      const height = window.innerHeight;
+      const orientation = width > height ? 'landscape' : 'portrait';
+
+      const columnas = orientation === 'landscape' ? 4 : 2;
+      const filas = 4 / columnas;
+
+      grid.style.gridTemplateColumns = `repeat(${columnas}, 1fr)`;
+      grid.style.gridTemplateRows = `repeat(${filas}, 1fr)`;
+
+      const headerH = document.querySelector('.header').offsetHeight;
+      const footerH = document.querySelector('.footer').offsetHeight;
+      const disponible = height - headerH - footerH - 16;
+
+      const alturaBloque = disponible / filas;
+
+      for (let i = 1; i <= 4; i++) {
+        const b = document.createElement("div");
+        b.className = "block";
+        b.style.height = `${alturaBloque}px`;
+        b.innerText = `Bloque ${i}`;
+        grid.appendChild(b);
       }
     }
 
-    function revelarTodo() {
-      libroActual.palabras.forEach((_, i) => {
-        const block = $(`bloque${i}`);
-        if (i === bloquePortada) {
-          block.innerHTML = "";
-          const wrapper = document.createElement("div");
-          wrapper.className = "portada-wrapper";
-          const img = document.createElement("img");
-          img.src = libroActual.portada;
-          img.alt = "Portada";
-          wrapper.appendChild(img);
-          block.appendChild(wrapper);
-          block.style.background = "none";
-        } else {
-          $(`bloque${i}Text`).classList.remove("hidden");
-          block.querySelector(".label").classList.add("hidden");
-        }
-      });
-      document.body.classList.add("dark");
-      document.body.style.background = libroActual.fondo;
-      $("logoTriggui").style.display = "none";
-      $("fraseMagica").style.opacity = 1;
-      setTimeout(() => {
-        $("fraseMagica").style.opacity = 0;
-        $("shockBtn").style.opacity = 1;
-      }, 2500);
-      revelado = true;
-    }
-
-    $("shockBtn").onclick = async () => {
-      $("shockBtn").style.opacity = 0;
-      $("contador").style.opacity = 1;
-      try {
-        const res = await fetch("https://triggui-api.vercel.app/api/increment");
-        const data = await res.json();
-        $("contador").innerHTML = `✨ Juntos hemos abierto <span class="resaltado">${data.total.toLocaleString('es-MX')}</span> libros físicos ✨`;
-      } catch {
-        $("contador").innerText = "📚 ¡Error al contar libros!";
-      }
-    };
+    // Inicial + cada vez que se redimensiona
+    window.addEventListener("resize", redibujarBloques);
+    window.addEventListener("orientationchange", redibujarBloques);
+    window.addEventListener("load", redibujarBloques);
   </script>
 </body>
 </html>
