--- a/public/index.html
+++ b/public/index.html
@@ -3,240 +3,287 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>TrigguiApp – Encuentra el libro</title>
+  <title>TrigguiApp – Trascendente</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
-      width: 100%; height: 100%;
+      height: 100%;
+      width: 100%;
       font-family: 'Archivo', sans-serif;
       background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
-      overflow: hidden;
     }
-    #mensajeInicial {
+    .grid {
       position: absolute;
-      top: 2.5%;
-      left: 50%;
-      transform: translateX(-50%);
-      color: #fff;
-      font-size: 1.05rem;
-      font-family: 'Poppins', sans-serif;
-      background: rgba(255,255,255,0.08);
-      padding: 10px 20px;
-      border-radius: 999px;
-      z-index: 10;
-      white-space: nowrap;
-      backdrop-filter: blur(6px);
-    }
-    #grid {
+      top: 1.5vw;
+      bottom: 1.5vw;
+      left: 1.5vw;
+      right: 1.5vw;
       display: grid;
-      gap: 2vw;
-      padding: 2vw;
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0; left: 0;
+      gap: 1vw;
     }
     .block {
-      border-radius: 20px;
+      border-radius: 18px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       color: white;
-      font-weight: bold;
-      font-size: 1.4rem;
-      display: flex;
-      justify-content: center;
-      align-items: center;
       text-align: center;
-      background-size: 200% 200%;
-      background-position: center;
-      cursor: pointer;
       position: relative;
-      overflow: hidden;
-      transition: all 0.3s ease;
+      font-size: 1.1rem;
+      background-size: 200% 200%;
+      animation: fadeIn 1s ease forwards;
+      cursor: pointer;
+      flex-direction: column;
+      transition: transform 0.3s;
     }
-    .block-content {
-      padding: 8px;
-      z-index: 2;
-      position: absolute;
+    .block:hover {
+      transform: scale(1.03);
     }
-    .accionable {
-      font-family: 'Poppins', sans-serif;
+    .label {
+      z-index: 1;
+      font-weight: bold;
+    }
+    .label.guia {
+      background: rgba(255, 255, 255, 0.15);
+      border: 2px solid #ff4081;
+      padding: 0.6rem 1rem;
+      border-radius: 12px;
       font-size: 1.05rem;
-      font-weight: 600;
-      opacity: 0;
-      transition: opacity 0.5s ease;
-      text-align: center;
+      animation: glow 1.8s ease-in-out infinite;
     }
-    .portada-wrapper {
-      width: 100%;
-      height: 100%;
-      border-radius: 20px;
-      overflow: hidden;
-      display: flex;
+    .frase, .portada {
+      position: absolute;
+      inset: 0;
+      display: none;
       justify-content: center;
       align-items: center;
-    }
-    .portada-wrapper img {
-      width: 85%;
-      height: auto;
-      max-height: 90%;
-      object-fit: contain;
-      border-radius: 20px;
-      box-shadow: 0 10px 24px rgba(0,0,0,0.4);
-    }
-    #shockBtn {
-      position: absolute;
-      bottom: 20px;
-      right: 20px;
-      background: linear-gradient(135deg, #00c853, #b2ff59);
-      color: black;
-      font-family: 'Poppins', sans-serif;
-      font-weight: 700;
-      border: none;
-      border-radius: 999px;
-      padding: 14px 24px;
-      font-size: 1rem;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.2);
-      display: none;
-      cursor: pointer;
-      z-index: 11;
-    }
-    #contador {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: #ffee58;
-      font-size: 1.6rem;
-      font-family: 'Poppins', sans-serif;
-      background: rgba(0,0,0,0.6);
-      padding: 20px 30px;
-      border-radius: 20px;
+      padding: 1rem;
       text-align: center;
-      display: none;
-      z-index: 12;
-      box-shadow: 0 0 20px rgba(255,255,255,0.1);
+      font-family: 'Poppins', sans-serif;
     }
-    #logoTriggui {
-      position: absolute;
-      bottom: 14px;
-      left: 14px;
-      height: 22px;
-      opacity: 0.35;
-      pointer-events: none;
+    .frase {
+      font-size: 1rem;
+      animation: fadeIn 0.6s ease forwards;
+    }
+    .portada {
+      animation: glow 6s ease-in-out infinite;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    .portada img {
+      max-width: 85%;
+      max-height: 75%;
+      border-radius: 16px;
+      box-shadow: 0 10px 24px rgba(0, 0, 0, 0.4);
+    }
+
+    .ctaZone {
+      position: fixed;
+      bottom: 3vh;
+      left: 50%;
+      transform: translateX(-50%);
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      z-index: 10;
+      text-align: center;
+    }
+    .ctaZone button {
+      background: #00ffc3;
+      color: #000;
+      border: none;
+      padding: 0.8rem 1.6rem;
+      border-radius: 999px;
+      font-size: 1.05rem;
+      font-weight: bold;
+      cursor: pointer;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.25);
+      transition: background 0.3s;
+    }
+    .ctaZone button:hover {
+      background: #a1ffe7;
+    }
+
+    .celebracion-overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.75);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 20;
+      animation: fadeIn 0.5s ease both;
+    }
+    .celebracion-message {
+      font-size: 1.4rem;
+      color: #fff;
+      background: rgba(255, 255, 255, 0.05);
+      padding: 1.2rem 2rem;
+      border-radius: 16px;
+      text-align: center;
+      font-family: 'Poppins', sans-serif;
+      box-shadow: 0 0 30px rgba(255, 255, 255, 0.1);
+      animation: celebracion 1.2s ease both;
+    }
+    .resaltado {
+      color: #ffeb3b;
+      font-weight: 700;
+    }
+
+    .trigguiletras {
+      position: fixed;
+      top: 1vh;
+      right: 1vw;
+      height: 18px;
+      opacity: 0.5;
+      z-index: 5;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    @keyframes glow {
+      0%, 100% { box-shadow: 0 0 8px #ff4081; }
+      50% { box-shadow: 0 0 18px #ff80ab; }
+    }
+    @keyframes celebracion {
+      0% { transform: scale(0.8); opacity: 0; }
+      60% { transform: scale(1.1); opacity: 1; }
+      100% { transform: scale(1); }
     }
   </style>
 </head>
 <body>
-  <div id="mensajeInicial">Toca el bloque donde crees que está el libro 📚</div>
-  <div id="grid"></div>
-  <button id="shockBtn">✅ ¡Sí! Abrí un libro físico</button>
-  <div id="contador"></div>
-  <img id="logoTriggui" src="/trigguiletras.png" />
+  <div class="grid" id="gridContainer"></div>
+
+  <div class="ctaZone" id="ctaZone">
+    <button id="ctaBtn">📚 Haz clic si abriste un libro físico</button>
+  </div>
+
+  <div class="celebracion-overlay" id="celebracionOverlay">
+    <div class="celebracion-message" id="celebracionMsg">
+      ✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨
+    </div>
+  </div>
+
+  <img src="/trigguiletras.png" alt="Trigguiletras" class="trigguiletras" />
 
   <script>
-    const $ = id => document.getElementById(id);
-    let libroActual, bloquePortada, revelado = false;
+    const grid = document.getElementById("gridContainer");
+    const ctaZone = document.getElementById("ctaZone");
+    const ctaBtn = document.getElementById("ctaBtn");
+    const celebracionOverlay = document.getElementById("celebracionOverlay");
+    const celebracionMsg = document.getElementById("celebracionMsg");
 
-    fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json")
-      .then(res => res.json())
-      .then(data => {
-        const libro = data.libros[Math.floor(Math.random()*data.libros.length)];
-        libroActual = libro;
-        bloquePortada = Math.floor(Math.random()*4);
-        iniciarUI(libro);
-      });
+    const emojis = ["🌊", "🛡️", "🧠", "📘", "🔮", "❤️", "✨", "🪞"];
+    let libro = null;
+    let portadaBloque = 0;
+    let bloqueGuia = 0;
+    let revelado = false;
 
-    function generarGradiente(color) {
-      const h = parseInt(color.slice(1,3),16),
-            l = parseInt(color.slice(3,5),16),
-            s = parseInt(color.slice(5,7),16);
-      const light = `rgba(${Math.min(h+40,255)},${Math.min(l+40,255)},${Math.min(s+40,255)},0.9)`;
-      return `linear-gradient(135deg, ${color}, ${light})`;
+    function generarGradiente(hex) {
+      const r = parseInt(hex.slice(1,3), 16);
+      const g = parseInt(hex.slice(3,5), 16);
+      const b = parseInt(hex.slice(5,7), 16);
+      const light = `rgba(${Math.min(r+30,255)},${Math.min(g+30,255)},${Math.min(b+30,255)},0.85)`;
+      return `linear-gradient(135deg, ${hex}, ${light})`;
     }
 
-    function ajustarLayout() {
-      const grid = $("grid");
-      const w = window.innerWidth;
-      const h = window.innerHeight;
-      const portrait = h >= w;
-      const margin = 24;
-      const availableH = h - margin * 2;
-      const availableW = w - margin * 2;
-      const rows = portrait ? 2 : 1;
-      const cols = portrait ? 2 : 4;
-      const blockH = (availableH - ((rows - 1) * margin)) / rows;
-      const blockW = (availableW - ((cols - 1) * margin)) / cols;
+    function dibujarUI() {
+      const w = window.innerWidth, h = window.innerHeight;
+      const cols = w > h ? 4 : 2;
+      const rows = 4 / cols;
       grid.style.gridTemplateColumns = `repeat(${cols}, 1fr)`;
       grid.style.gridTemplateRows = `repeat(${rows}, 1fr)`;
-      grid.style.padding = `${margin}px`;
-      grid.style.gap = `${margin}px`;
-    }
-
-    function iniciarUI(libro) {
-      ajustarLayout();
-      const grid = $("grid");
       grid.innerHTML = "";
-      const randomPrompt = Math.floor(Math.random() * 4);
+
       libro.palabras.forEach((palabra, i) => {
-        const div = document.createElement("div");
-        div.className = "block";
-        div.id = `bloque${i}`;
-        div.style.background = generarGradiente(libro.colores[i]);
-        div.innerHTML = `
-          <div class="block-content label">${i === randomPrompt ? "¿Qué sientes?" : palabra}</div>
-          <div class="block-content accionable" id="bloque${i}Text">${libro.frases[i]}</div>`;
-        div.onclick = () => manejarClick(i);
-        grid.appendChild(div);
+        const b = document.createElement("div");
+        b.className = "block";
+        b.dataset.index = i;
+
+        if (i === bloqueGuia) {
+          b.style.background = "linear-gradient(135deg, #ff4081, #ff80ab)";
+        } else {
+          b.style.background = generarGradiente(libro.colores[i] || "#555");
+        }
+
+        const label = document.createElement("div");
+        label.className = "label" + (i === bloqueGuia ? " guia" : "");
+        label.innerText = i === bloqueGuia ? "¿Qué sientes?" : `${emojis[i]} ${palabra}`;
+
+        const frase = document.createElement("div");
+        frase.className = "frase";
+        frase.innerText = libro.frases[i];
+
+        const portada = document.createElement("div");
+        portada.className = "portada";
+        const img = document.createElement("img");
+        img.src = libro.portada;
+        portada.appendChild(img);
+
+        b.append(label, frase, portada);
+        b.onclick = () => manejarClick(b);
+        grid.appendChild(b);
       });
-      document.querySelectorAll('.accionable').forEach(el => el.style.opacity = 0);
     }
 
-    function manejarClick(i) {
+    function manejarClick(bloque) {
+      const i = parseInt(bloque.dataset.index);
+      const children = bloque.children;
       if (revelado) return location.reload();
-      if (i === bloquePortada) revelarTodo();
-      else {
-        $(`bloque${i}Text`).style.opacity = 1;
-        $(`bloque${i}`).querySelector(".label").style.opacity = 0;
+
+      if (i === portadaBloque) {
+        [...children].forEach(c => c.style.display = "none");
+        children[2].style.display = "flex";
+
+        [...grid.children].forEach((blk, j) => {
+          if (j !== i) {
+            blk.children[0].style.display = "none";
+            blk.children[1].style.display = "flex";
+          }
+        });
+
+        revelado = true;
+        ctaZone.style.display = "flex";
+      } else {
+        bloque.children[0].style.display = "none";
+        bloque.children[1].style.display = "flex";
       }
     }
 
-    function revelarTodo() {
-      document.getElementById("mensajeInicial").style.display = "none";
-      libroActual.palabras.forEach((_, i) => {
-        const block = $(`bloque${i}`);
-        if (i === bloquePortada) {
-          block.innerHTML = "";
-          const wrapper = document.createElement("div");
-          wrapper.className = "portada-wrapper";
-          const img = document.createElement("img");
-          img.src = libroActual.portada;
-          img.alt = "Portada";
-          wrapper.appendChild(img);
-          block.appendChild(wrapper);
-          block.style.background = "none";
-        } else {
-          $(`bloque${i}Text`).style.opacity = 1;
-          block.querySelector(".label").style.opacity = 0;
-        }
-      });
-      setTimeout(() => $("shockBtn").style.display = "block", 1800);
-      revelado = true;
-    }
-
-    $("shockBtn").onclick = async () => {
-      $("shockBtn").style.display = "none";
-      $("contador").style.display = "block";
-      $("contador").innerText = "📚 Calculando libros abiertos...";
+    ctaBtn.onclick = async () => {
+      ctaBtn.disabled = true;
+      celebracionOverlay.style.display = "flex";
+      celebracionMsg.innerHTML = '✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨';
       try {
         const res = await fetch("https://triggui-api.vercel.app/api/increment");
         const data = await res.json();
-        $("contador").innerHTML = `✨ Gracias. Ya somos <strong>${data.total.toLocaleString('es-MX')}</strong> abriendo libros físicos ✨`;
+        celebracionMsg.innerHTML = `✨ Juntos hemos abierto <span class="resaltado">${data.total.toLocaleString('es-MX')}</span> libros físicos ✨`;
       } catch {
-        $("contador").innerText = "📚 ¡Error al contar libros!";
+        celebracionMsg.innerText = "📚 Error al contar libros";
       }
+      setTimeout(() => location.reload(), 3000);
     };
 
-    window.addEventListener("resize", ajustarLayout);
+    async function iniciar() {
+      try {
+        const res = await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json");
+        const data = await res.json();
+        libro = data.libros[Math.floor(Math.random() * data.libros.length)];
+        portadaBloque = Math.floor(Math.random() * 4);
+        do { bloqueGuia = Math.floor(Math.random() * 4); } while (bloqueGuia === portadaBloque);
+        dibujarUI();
+      } catch (e) {
+        console.error("Error cargando contenido:", e);
+      }
+    }
+
+    window.addEventListener("load", iniciar);
+    window.addEventListener("resize", dibujarUI);
+    window.addEventListener("orientationchange", dibujarUI);
   </script>
 </body>
 </html>
